UseCaseCodeAdapter/src/org/moflon/moca/usecase/parser/UsecaseParser.java
// $ANTLR 3.5.2 C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g 2015-04-21 19:03:35

package org.moflon.moca.usecase.parser; 
import java.util.Collection;
import Moca.MocaFactory;
import Moca.Problem;
import Moca.ProblemType;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class UsecaseParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTORS", "ALTERNATIVES", "ALTERNATIVE_FLOW", 
		"ALT_FLOW_ALT", "AS", "BASICFLOW", "BY", "CONDITION", "CONTINUEWITH", 
		"DESCRIPTION", "ELSE", "ENDFLOW", "ENDPACKAGE", "ENDUSECASE", "EXCEPTIONFLOW", 
		"EXTENDS", "FINALSTATE", "ID", "IF", "INPUT", "INVOKEUSECASE", "INVOKE_FLOW", 
		"LOCAL_ALTERNATIVE", "MIX", "NAME", "NEXT", "ORGANIZATION", "OUTPUT", 
		"PACKAGE", "PARALLEL_FLOW", "PARALLEL_STEP", "PERSON", "POSTCONDITIONS", 
		"PRECONDITIONS", "PROCESS", "QUALIFIED_NAME", "QUOTED_STRING", "SEPARATOR", 
		"STEP", "SYSTEM", "THEN", "TYPE", "USECASE", "WITHPOSTCONDITION", "WS"
	};
	public static final int EOF=-1;
	public static final int ACTORS=4;
	public static final int ALTERNATIVES=5;
	public static final int ALTERNATIVE_FLOW=6;
	public static final int ALT_FLOW_ALT=7;
	public static final int AS=8;
	public static final int BASICFLOW=9;
	public static final int BY=10;
	public static final int CONDITION=11;
	public static final int CONTINUEWITH=12;
	public static final int DESCRIPTION=13;
	public static final int ELSE=14;
	public static final int ENDFLOW=15;
	public static final int ENDPACKAGE=16;
	public static final int ENDUSECASE=17;
	public static final int EXCEPTIONFLOW=18;
	public static final int EXTENDS=19;
	public static final int FINALSTATE=20;
	public static final int ID=21;
	public static final int IF=22;
	public static final int INPUT=23;
	public static final int INVOKEUSECASE=24;
	public static final int INVOKE_FLOW=25;
	public static final int LOCAL_ALTERNATIVE=26;
	public static final int MIX=27;
	public static final int NAME=28;
	public static final int NEXT=29;
	public static final int ORGANIZATION=30;
	public static final int OUTPUT=31;
	public static final int PACKAGE=32;
	public static final int PARALLEL_FLOW=33;
	public static final int PARALLEL_STEP=34;
	public static final int PERSON=35;
	public static final int POSTCONDITIONS=36;
	public static final int PRECONDITIONS=37;
	public static final int PROCESS=38;
	public static final int QUALIFIED_NAME=39;
	public static final int QUOTED_STRING=40;
	public static final int SEPARATOR=41;
	public static final int STEP=42;
	public static final int SYSTEM=43;
	public static final int THEN=44;
	public static final int TYPE=45;
	public static final int USECASE=46;
	public static final int WITHPOSTCONDITION=47;
	public static final int WS=48;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public UsecaseParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public UsecaseParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return UsecaseParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g"; }


	  public Collection<Problem> problems = new ArrayList<Problem>();

	      public void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	          Problem problem = MocaFactory.eINSTANCE.createProblem();
	          int line  = e.line;
	          int charPos = e.charPositionInLine;
	          int tokenLenght = 1;
	          Token token = e.token;
	          if(token != null) 
	            tokenLenght = token.getText().length();
	                  
	          
	          problem.setType(ProblemType.ERROR);
	          problem.setLine(line); 
	          problem.setCharacterPositionStart(charPos); 
	          problem.setCharacterPositionEnd(charPos+tokenLenght);
	          problem.setMessage("Parser: " + getErrorMessage(e, tokenNames));
	          
	          problems.add(problem);
	          super.displayRecognitionError(tokenNames, e);
	    }


	public static class main_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "main"
	// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:48:1: main : ( packageRule )+ ;
	public final UsecaseParser.main_return main() throws RecognitionException {
		UsecaseParser.main_return retval = new UsecaseParser.main_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope packageRule1 =null;


		try {
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:48:5: ( ( packageRule )+ )
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:48:7: ( packageRule )+
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:48:7: ( packageRule )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==PACKAGE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:48:7: packageRule
					{
					pushFollow(FOLLOW_packageRule_in_main61);
					packageRule1=packageRule();
					state._fsp--;

					adaptor.addChild(root_0, packageRule1.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "main"


	public static class packageRule_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "packageRule"
	// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:49:1: packageRule : PACKAGE QUALIFIED_NAME descriptionRule ( actorsRule )? useCasesRule ENDPACKAGE -> ^( QUALIFIED_NAME descriptionRule ( actorsRule )? useCasesRule ) ;
	public final UsecaseParser.packageRule_return packageRule() throws RecognitionException {
		UsecaseParser.packageRule_return retval = new UsecaseParser.packageRule_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token PACKAGE2=null;
		Token QUALIFIED_NAME3=null;
		Token ENDPACKAGE7=null;
		ParserRuleReturnScope descriptionRule4 =null;
		ParserRuleReturnScope actorsRule5 =null;
		ParserRuleReturnScope useCasesRule6 =null;

		Object PACKAGE2_tree=null;
		Object QUALIFIED_NAME3_tree=null;
		Object ENDPACKAGE7_tree=null;
		RewriteRuleTokenStream stream_PACKAGE=new RewriteRuleTokenStream(adaptor,"token PACKAGE");
		RewriteRuleTokenStream stream_QUALIFIED_NAME=new RewriteRuleTokenStream(adaptor,"token QUALIFIED_NAME");
		RewriteRuleTokenStream stream_ENDPACKAGE=new RewriteRuleTokenStream(adaptor,"token ENDPACKAGE");
		RewriteRuleSubtreeStream stream_actorsRule=new RewriteRuleSubtreeStream(adaptor,"rule actorsRule");
		RewriteRuleSubtreeStream stream_descriptionRule=new RewriteRuleSubtreeStream(adaptor,"rule descriptionRule");
		RewriteRuleSubtreeStream stream_useCasesRule=new RewriteRuleSubtreeStream(adaptor,"rule useCasesRule");

		try {
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:49:12: ( PACKAGE QUALIFIED_NAME descriptionRule ( actorsRule )? useCasesRule ENDPACKAGE -> ^( QUALIFIED_NAME descriptionRule ( actorsRule )? useCasesRule ) )
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:49:14: PACKAGE QUALIFIED_NAME descriptionRule ( actorsRule )? useCasesRule ENDPACKAGE
			{
			PACKAGE2=(Token)match(input,PACKAGE,FOLLOW_PACKAGE_in_packageRule68);  
			stream_PACKAGE.add(PACKAGE2);

			QUALIFIED_NAME3=(Token)match(input,QUALIFIED_NAME,FOLLOW_QUALIFIED_NAME_in_packageRule70);  
			stream_QUALIFIED_NAME.add(QUALIFIED_NAME3);

			pushFollow(FOLLOW_descriptionRule_in_packageRule72);
			descriptionRule4=descriptionRule();
			state._fsp--;

			stream_descriptionRule.add(descriptionRule4.getTree());
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:50:2: ( actorsRule )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==ACTORS) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:50:2: actorsRule
					{
					pushFollow(FOLLOW_actorsRule_in_packageRule76);
					actorsRule5=actorsRule();
					state._fsp--;

					stream_actorsRule.add(actorsRule5.getTree());
					}
					break;

			}

			pushFollow(FOLLOW_useCasesRule_in_packageRule79);
			useCasesRule6=useCasesRule();
			state._fsp--;

			stream_useCasesRule.add(useCasesRule6.getTree());
			ENDPACKAGE7=(Token)match(input,ENDPACKAGE,FOLLOW_ENDPACKAGE_in_packageRule81);  
			stream_ENDPACKAGE.add(ENDPACKAGE7);

			// AST REWRITE
			// elements: descriptionRule, QUALIFIED_NAME, useCasesRule, actorsRule
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 51:2: -> ^( QUALIFIED_NAME descriptionRule ( actorsRule )? useCasesRule )
			{
				// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:51:5: ^( QUALIFIED_NAME descriptionRule ( actorsRule )? useCasesRule )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_QUALIFIED_NAME.nextNode(), root_1);
				adaptor.addChild(root_1, stream_descriptionRule.nextTree());
				// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:51:38: ( actorsRule )?
				if ( stream_actorsRule.hasNext() ) {
					adaptor.addChild(root_1, stream_actorsRule.nextTree());
				}
				stream_actorsRule.reset();

				adaptor.addChild(root_1, stream_useCasesRule.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "packageRule"


	public static class actorsRule_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "actorsRule"
	// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:52:1: actorsRule : ACTORS ( actorRule )+ -> ^( ACTORS ( actorRule )+ ) ;
	public final UsecaseParser.actorsRule_return actorsRule() throws RecognitionException {
		UsecaseParser.actorsRule_return retval = new UsecaseParser.actorsRule_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ACTORS8=null;
		ParserRuleReturnScope actorRule9 =null;

		Object ACTORS8_tree=null;
		RewriteRuleTokenStream stream_ACTORS=new RewriteRuleTokenStream(adaptor,"token ACTORS");
		RewriteRuleSubtreeStream stream_actorRule=new RewriteRuleSubtreeStream(adaptor,"rule actorRule");

		try {
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:52:11: ( ACTORS ( actorRule )+ -> ^( ACTORS ( actorRule )+ ) )
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:52:13: ACTORS ( actorRule )+
			{
			ACTORS8=(Token)match(input,ACTORS,FOLLOW_ACTORS_in_actorsRule102);  
			stream_ACTORS.add(ACTORS8);

			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:52:20: ( actorRule )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==ID) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:52:20: actorRule
					{
					pushFollow(FOLLOW_actorRule_in_actorsRule104);
					actorRule9=actorRule();
					state._fsp--;

					stream_actorRule.add(actorRule9.getTree());
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			// AST REWRITE
			// elements: actorRule, ACTORS
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 52:31: -> ^( ACTORS ( actorRule )+ )
			{
				// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:52:34: ^( ACTORS ( actorRule )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_ACTORS.nextNode(), root_1);
				if ( !(stream_actorRule.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_actorRule.hasNext() ) {
					adaptor.addChild(root_1, stream_actorRule.nextTree());
				}
				stream_actorRule.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "actorsRule"


	public static class actorRule_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "actorRule"
	// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:53:1: actorRule : ID AS actorTypeRule descriptionRule ( extendRule )? -> ^( ID actorTypeRule descriptionRule ( extendRule )? ) ;
	public final UsecaseParser.actorRule_return actorRule() throws RecognitionException {
		UsecaseParser.actorRule_return retval = new UsecaseParser.actorRule_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID10=null;
		Token AS11=null;
		ParserRuleReturnScope actorTypeRule12 =null;
		ParserRuleReturnScope descriptionRule13 =null;
		ParserRuleReturnScope extendRule14 =null;

		Object ID10_tree=null;
		Object AS11_tree=null;
		RewriteRuleTokenStream stream_AS=new RewriteRuleTokenStream(adaptor,"token AS");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_descriptionRule=new RewriteRuleSubtreeStream(adaptor,"rule descriptionRule");
		RewriteRuleSubtreeStream stream_extendRule=new RewriteRuleSubtreeStream(adaptor,"rule extendRule");
		RewriteRuleSubtreeStream stream_actorTypeRule=new RewriteRuleSubtreeStream(adaptor,"rule actorTypeRule");

		try {
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:53:10: ( ID AS actorTypeRule descriptionRule ( extendRule )? -> ^( ID actorTypeRule descriptionRule ( extendRule )? ) )
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:53:12: ID AS actorTypeRule descriptionRule ( extendRule )?
			{
			ID10=(Token)match(input,ID,FOLLOW_ID_in_actorRule120);  
			stream_ID.add(ID10);

			AS11=(Token)match(input,AS,FOLLOW_AS_in_actorRule122);  
			stream_AS.add(AS11);

			pushFollow(FOLLOW_actorTypeRule_in_actorRule124);
			actorTypeRule12=actorTypeRule();
			state._fsp--;

			stream_actorTypeRule.add(actorTypeRule12.getTree());
			pushFollow(FOLLOW_descriptionRule_in_actorRule126);
			descriptionRule13=descriptionRule();
			state._fsp--;

			stream_descriptionRule.add(descriptionRule13.getTree());
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:53:48: ( extendRule )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==EXTENDS) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:53:48: extendRule
					{
					pushFollow(FOLLOW_extendRule_in_actorRule128);
					extendRule14=extendRule();
					state._fsp--;

					stream_extendRule.add(extendRule14.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: actorTypeRule, descriptionRule, ID, extendRule
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 54:2: -> ^( ID actorTypeRule descriptionRule ( extendRule )? )
			{
				// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:54:5: ^( ID actorTypeRule descriptionRule ( extendRule )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_ID.nextNode(), root_1);
				adaptor.addChild(root_1, stream_actorTypeRule.nextTree());
				adaptor.addChild(root_1, stream_descriptionRule.nextTree());
				// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:54:40: ( extendRule )?
				if ( stream_extendRule.hasNext() ) {
					adaptor.addChild(root_1, stream_extendRule.nextTree());
				}
				stream_extendRule.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "actorRule"


	public static class actorTypeRule_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "actorTypeRule"
	// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:55:1: actorTypeRule : actorTypeEnumRule -> ^( TYPE actorTypeEnumRule ) ;
	public final UsecaseParser.actorTypeRule_return actorTypeRule() throws RecognitionException {
		UsecaseParser.actorTypeRule_return retval = new UsecaseParser.actorTypeRule_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope actorTypeEnumRule15 =null;

		RewriteRuleSubtreeStream stream_actorTypeEnumRule=new RewriteRuleSubtreeStream(adaptor,"rule actorTypeEnumRule");

		try {
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:55:14: ( actorTypeEnumRule -> ^( TYPE actorTypeEnumRule ) )
			// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:55:16: actorTypeEnumRule
			{
			pushFollow(FOLLOW_actorTypeEnumRule_in_actorTypeRule149);
			actorTypeEnumRule15=actorTypeEnumRule();
			state._fsp--;

			stream_actorTypeEnumRule.add(actorTypeEnumRule15.getTree());
			// AST REWRITE
			// elements: actorTypeEnumRule
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 55:34: -> ^( TYPE actorTypeEnumRule )
			{
				// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:55:37: ^( TYPE actorTypeEnumRule )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPE, "TYPE"), root_1);
				adaptor.addChild(root_1, stream_actorTypeEnumRule.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "actorTypeRule"


	public static class useCasesRule_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "useCasesRule"
	// C:\\Users\\marat\\Documents\\EclipseWS\\Luna\\moflon\\UseCaseCodeAdapter\\src\\org\\moflon\\moca\\usecase\\parser\\UsecaseParser.g:56:1: useCasesRule : ( usecaseRule )* -> ^( USECASE ( usecaseRule )* ) ;
	public final UsecaseParser.useCasesRule_return useCasesRule() throws RecognitionException {
